@@ -46,7 +46,8 @@
 #' model. This approach was introduced for RF curves by Buylaert et al., 2012
 #' and Lapp et al., 2012.
 #'
-#' Here the sliding is done by searching for the minimum of the squared residuals.\cr
+#' Here the sliding is done by searching for the minimum of the squared residuals.
+#' For the mathematical details of the implementation see Frouin et al., 2016 \cr
 #'
 #' \bold{\code{method.control}}\cr
 #'
@@ -261,6 +262,10 @@
 #' automated multi-spectral radioluminescence reading system for geochronometry
 #' and dosimetry. Nuclear Instruments and Methods in Physics Research Section
 #' B: Beam Interactions with Materials and Atoms 207, 487-499.
+#'
+#' Frouin, M., Huot, S., Kreutzer, S., Lahaye, C., Lamothe, M., Philippe, A., Mercier, N., 2016.
+#' An improved radiofluorescence single-aliquot regenerative dose protocol for K-feldspars.
+#' Quaternary Geochronology 1-32. doi:10.1016/j.quageo.2016.11.004
 #'
 #' Lapp, T., Jain, M., Thomsen, K.J., Murray, A.S., Buylaert, J.P., 2012. New
 #' luminescence measurement facilities in retrospective dosimetry. Radiation
